force-app/main/default/objects/SLCA2__CA_HoverFields__c/fields/SLCA2__fieldOption__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldOption__c</fullName>
    <description>JSON options</description>
    <label>fieldOption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>