force-app/main/default/objects/SLCA2__CA_HoverFields__c/fields/SLCA2__fieldType__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__fieldType__c</fullName>
    <label>fieldType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hover</fullName>
                <default>true</default>
                <label>hover</label>
            </value>
            <value>
                <fullName>relatedList</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>